--- a/procedure/code/01-VT-Mobile-Home-Flooding_Code.Rmd
+++ b/procedure/code/01-VT-Mobile-Home-Flooding_Code.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Analysis"
+title: "Reproducing a QGIS Spatial Analysis of Flood Hazard Vulnerability in Vermont’s Mobile Homes Using a Code-based Approach in R"
 author: "William Procter"
 date: "`r Sys.Date()`"
 output: html_document
@@ -10,6 +10,12 @@ knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding, output_dir = "../../docs/report") })
 ---
 
+
+```{r, results='asis'}
+writeLines("td, th { padding : 6px } th { background-color : brown ; color : white; border : 1px solid white; } td { color : brown ; border : 1px solid brown }", con = "mystyle.css")
+dset1 <- head(ToothGrowth)
+knitr::kable(dset1, format = "html")
+```
 
 # Abstract
 
@@ -51,7 +57,7 @@ and migrate to in the future are also at risk of flooding."
 # and double colons such as here::i_am()
 packages <- c("downloader", "rdhs", "haven", "readr", "tidyverse", "pastecs",
              "stars", "sf", "sp", "classInt", 
-             "tmap", "units", "knitr", "tibble", "here", "dplyr", "rgdal")
+             "tmap", "units", "knitr", "tibble", "here", "dplyr", "rgdal", "kableExtra")
 
 # force all conflicts to become errors
 # if you load dplyr and use filter(), R has to guess whether you mean dplyr::filter() or stats::filter()
@@ -117,31 +123,215 @@ scratch <- here("data", "scratch")
 
 There are five layers for this analysis, each coming from a different primary source.  Primary data sources for the study are to include ...
 
-1. e911pts.shp - point - epsg: 32145
+**1. e911pts.shp** - point - epsg: 32145
 e911 point location data for all residences and buildings in Vermont, for use with emergency response.  The data file can be found on the Vermont Open GeoData Portal <http://geodata.vermont.gov/>
-- SITETYPE: type of building structure/use case of the structure.  "MOBILEHOME" is the SITETYPE that indicates a site is a mobile home/
+ - SITETYPE: type of building structure/use case of the structure.  "MOBILEHOME" is the SITETYPE that indicates a site is a mobile home/
 
-2. FEMA_100yr.shp - polygon - epsg: 32145
+- `Title`: e911pts.shp
+- `Abstract`: Point location data for all ocations of residences and buildings in Bennington, Rutland, Windham, and Windsor counties for use with emergency response
+- `Spatial Coverage`: Bennington, Rutland, Windham, and Windsor counties
+- `Spatial Resolution`: Specify the spatial resolution as a scale factor, description of the level of detail of each unit of observation (including administrative level of administrative areas), and/or or distance of a raster GRID size
+- `Spatial Reference System`: EPSG 32145 - NAD 83 Vermont
+- `Temporal Coverage`: Some time 2014-2022
+- `Temporal Resolution`: N/A
+- `Lineage`: Downloaded from the VT Open GeoData Portal by GEOG 0261 instructors, and cleaned to only include the 4 southernmost counties, and to select only the `sitetype` variable.
+- `Distribution`: The raw data is publicly available from the VT Open GeoData Portal, although the e911 point data is intended for use with emergency response
+- `Constraints`: N/A
+- `Data Quality`: Assumed to be accurate and representative of all residences and structures in Southern VT
+- `Variables`: For each variable, enter the following information. If you have two or more variables per data source, you may want to present this information in table form (shown below)
+  - `Label`: variable name as used in the data or code
+  - `Alias`: intuitive natural language name
+  - `Definition`: Short description or definition of the variable. Include measurement units in description.
+  - `Type`: data type, e.g. character string, integer, real
+  - `Accuracy`: e.g. uncertainty of measurements
+  - `Domain`: Expected range of Maximum and Minimum of numerical data, or codes or categories of nominal data, or reference to a standard codebook
+  - `Missing Data Value(s)`: Values used to represent missing data and frequency of missing data observations
+  - `Missing Data Frequency`: Frequency of missing data observations: not yet known for data to be collected
+
+| Label | Alias | Definition | Type | Accuracy | Domain | Missing Data Value(s) | Missing Data Frequency |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+| OBJECTID | unique identifier for each unique structure/residence | ... | numeric | ... | ... | n/a | n/a |
+| sitetype | Type of location, of which one category is 'MOBILE HOME' | ... | character | ... | ... | n/a | n/a |
+| geometry | point geometry| ... | unknown | ... | ... | n/a | n/a |
+
+
+
+**2. FEMA_100yr.shp** - polygon - epsg: 32145
 FEMA Flood Zone polygons with codes.  Codes starting with "A" indicate a 100-year flood risk zone. The data file can be found on the Vermont Open GeoData Portal <http://geodata.vermont.gov/>
-- FLD_Zone: contains FEMA Flood Zone Codes.  If a polygon has a code begins with an "A", then that polygon indicates a 100-year flood zone.
+ - FLD_Zone: contains FEMA Flood Zone Codes.  If a polygon has a code begins with an "A", then that polygon indicates a 100-year flood zone.
+ 
+ - `Title`: FEMA_100yr.shp
+- `Abstract`: multipart polygons of flood zones determined by FEMA
+- `Spatial Coverage`: Bennington, Rutland, Windham, and Windsor counties
+- `Spatial Resolution`: N/A
+- `Spatial Reference System`: EPSG 32145 - NAD 83 Vermont
+- `Temporal Coverage`: Some time 2014-2022
+- `Temporal Resolution`: N/A
+- `Lineage`: Downloaded from the VT Open GeoData Portal by GEOG 0261 instructors, and cleaned to only include the 4 southernmost counties.
+- `Distribution`: The raw data is publicly available from the VT Open GeoData Portal
+- `Constraints`: N/A
+- `Data Quality`: Assumed to be accurate and representative of all determined FEMA flood zones in southern VT
+- `Variables`: For each variable, enter the following information. If you have two or more variables per data source, you may want to present this information in table form (shown below)
+  - `Label`: variable name as used in the data or code
+  - `Alias`: intuitive natural language name
+  - `Definition`: Short description or definition of the variable. Include measurement units in description.
+  - `Type`: data type, e.g. character string, integer, real
+  - `Accuracy`: e.g. uncertainty of measurements
+  - `Domain`: Expected range of Maximum and Minimum of numerical data, or codes or categories of nominal data, or reference to a standard codebook
+  - `Missing Data Value(s)`: Values used to represent missing data and frequency of missing data observations
+  - `Missing Data Frequency`: Frequency of missing data observations: not yet known for data to be collected
 
-3. river_corridors.shp - polygon - epsg: 32145
+| Label | Alias | Definition | Type | Accuracy | Domain | Missing Data Value(s) | Missing Data Frequency |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+| FLD_ZONE | Identifies type of flood zone...FEMA Flood Zone Codes| All codes beginning with 'A' are included in the 1% flood risk zone (100-year flood risk) | character | ... | ... | n/a | n/a |
+| geometry | point geometry| ... | unknown | ... | ... | n/a | n/a |
+ 
+ 
+
+**3. river_corridors.shp** - polygon - epsg: 32145
 Vermont river corridor polygons, as defined by Flood Ready Vermont.  This flood hazard approach includes streams (with a 50 foot buffer) and rivers with watersheds more than 2km.  The data file can be found on the Vermont Open GeoData Portal <http://geodata.vermont.gov/>
 
+- `Title`: river_corridors.shp
+- `Abstract`: multipart polygon layer of river corridors determined by Flood Ready Vermont
+- `Spatial Coverage`: Bennington, Rutland, Windham, and Windsor counties
+- `Spatial Resolution`: N/A
+- `Spatial Reference System`: EPSG 32145 - NAD 83 Vermont
+- `Temporal Coverage`: Some time 2014-2022
+- `Temporal Resolution`: N/A
+- `Lineage`: Downloaded from the VT Open GeoData Portal by GEOG 0261 instructors, and cleaned to only include the 4 southernmost counties
+- `Distribution`: The raw data is publicly available from the VT Open GeoData Portal
+- `Constraints`: N/A
+- `Data Quality`: Assumed to be complete for all river corridors determined by Flood Ready Vermont
+- `Variables`: For each variable, enter the following information. If you have two or more variables per data source, you may want to present this information in table form (shown below)
+  - `Label`: variable name as used in the data or code
+  - `Alias`: intuitive natural language name
+  - `Definition`: Short description or definition of the variable. Include measurement units in description.
+  - `Type`: data type, e.g. character string, integer, real
+  - `Accuracy`: e.g. uncertainty of measurements
+  - `Domain`: Expected range of Maximum and Minimum of numerical data, or codes or categories of nominal data, or reference to a standard codebook
+  - `Missing Data Value(s)`: Values used to represent missing data and frequency of missing data observations
+  - `Missing Data Frequency`: Frequency of missing data observations: not yet known for data to be collected
 
-4. block_groups.shp - polygon - epsg: 32145
-Census block group polygons in southern Vermont, with data on housing.  The data file was acquired from the US Census ACS Survey 2014-2018
+| Label | Alias | Definition | Type | Accuracy | Domain | Missing Data Value(s) | Missing Data Frequency |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+| OBJECTID | Unique identifier for each individual river corridor| ... | numeric| ... | ... | n/a | n/a |
+| GNIS_NAME | name of the river/creek/stream that defines the river corridor| ... | character| ... | ... | n/a | n/a |
+| OBJECTID_1| n/a | ... | numeric | ... | ... | n/a | n/a |
+| ReachCode | n/a | ... | numeric | ... | ... | n/a | n/a |
+| geometry| point geometry| ... | unknown | ... | ... | n/a | n/a |
+
+
+
+**4. block_groups.shp** - polygon - epsg: 32145
+Census block group polygons in southern Vermont, with data on housing.  The data file was acquired from the US Census ACS Survey 2014-2018 <https://data.census.gov/>
 - mobileHU: estimated total number of mobile home housing units within the block group
 - totalHU: estimated total number of all housing units within the block group
 - county: name of county in which the block_group is located
 
-5. towns.shp - polygon - epsg:32145
-Downloaded from the US Census Bureau.
+- `Title`: block_groups.shp
+- `Abstract`: multipart polygon layer of the block groups and counties for the 4 southernmost counties in Vermont
+- `Spatial Coverage`: Bennington, Rutland, Windham, and Windsor counties
+- `Spatial Resolution`: N/A
+- `Spatial Reference System`: EPSG 32145 - NAD 83 Vermont
+- `Temporal Coverage`: 2014-2018 ACS estimates
+- `Temporal Resolution`: N/A
+- `Lineage`: Downloaded from the US Census American Community Survey by GEOG 0261 instructors, and cleaned to only include the 4 southernmost counties, and select the variables for number mobile housing units and number of total housing units
+- `Distribution`: The raw data is publicly available from the US Census/ACS
+- `Constraints`: N/A
+- `Data Quality`: Assumed to be complete (so far as the ACS estimates are complete) for the 4 southern VT counties
+- `Variables`: For each variable, enter the following information. If you have two or more variables per data source, you may want to present this information in table form (shown below)
+  - `Label`: variable name as used in the data or code
+  - `Alias`: intuitive natural language name
+  - `Definition`: Short description or definition of the variable. Include measurement units in description.
+  - `Type`: data type, e.g. character string, integer, real
+  - `Accuracy`: e.g. uncertainty of measurements
+  - `Domain`: Expected range of Maximum and Minimum of numerical data, or codes or categories of nominal data, or reference to a standard codebook
+  - `Missing Data Value(s)`: Values used to represent missing data and frequency of missing data observations
+  - `Missing Data Frequency`: Frequency of missing data observations: not yet known for data to be collected
+
+| Label | Alias | Definition | Type | Accuracy | Domain | Missing Data Value(s) | Missing Data Frequency |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+| fid | unique identifier | ... | numeric | ... | ... | n/a | n/a |
+| GEOID | unique identifier | ... | numeric | ... | ... | n/a | n/a |
+| mobileHU | estimated total of mobile home housing units in each block group| ... | numeric | ... | ... | n/a | n/a |
+| totalHU | estimated total of all housing units in each block group| ... | numeric | ... | ... | n/a | n/a |
+| COUNTYFP | code indicating which county the block group is in | ... | numeric | ... | ... | n/a | n/a |
+| county | name of county in which the block_group is located | ... | character | ... | ... | n/a | n/a |
+| geometry | point geometry| ... | unknown | ... | ... | n/a | n/a |
+
+
+
+**5. towns.shp** - polygon - epsg:32145
+Downloaded from the US Census Bureau. <https://data.census.gov/>
 - townName: name of the town
 
+- `Title`: towns.shp
+- `Abstract`: multipart polygon layer of the towns within the 4 southernmost counties in Vermont
+- `Spatial Coverage`: Bennington, Rutland, Windham, and Windsor counties
+- `Spatial Resolution`: N/A
+- `Spatial Reference System`: EPSG 32145 - NAD 83 Vermont
+- `Temporal Coverage`: 2014-2018 ACS estimates
+- `Temporal Resolution`: N/A
+- `Lineage`: Downloaded from the US Census American Community Survey by GEOG 0261 instructors, and cleaned to only include the towns in the 4 southernmost counties.
+- `Distribution`: The raw data is publicly available from the US Census/ACS
+- `Constraints`: N/A
+- `Data Quality`: Assumed to be complete (so far as the ACS estimates are complete) for the 4 southern VT counties
+- `Variables`: For each variable, enter the following information. If you have two or more variables per data source, you may want to present this information in table form (shown below)
+  - `Label`: variable name as used in the data or code
+  - `Alias`: intuitive natural language name
+  - `Definition`: Short description or definition of the variable. Include measurement units in description.
+  - `Type`: data type, e.g. character string, integer, real
+  - `Accuracy`: e.g. uncertainty of measurements
+  - `Domain`: Expected range of Maximum and Minimum of numerical data, or codes or categories of nominal data, or reference to a standard codebook
+  - `Missing Data Value(s)`: Values used to represent missing data and frequency of missing data observations
+  - `Missing Data Frequency`: Frequency of missing data observations: not yet known for data to be collected
+
+| Label | Alias | Definition | Type | Accuracy | Domain | Missing Data Value(s) | Missing Data Frequency |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+| fid | unique identifier | ... | numeric | ... | ... | n/a | n/a |
+| COUNTYFP | code indicating which county the block group is in | ... | numeric | ... | ... | n/a | n/a |
+| COUSUBFP | unknown | ... | numeric | ... | ... | n/a | n/a |
+| GEOID | unique identifier | ... | numeric | ... | ... | n/a | n/a |
+| townName | name of the town | ... | numeric | ... | ... | n/a | n/a |
+| geometry | point geometry| ... | unknown | ... | ... | n/a | n/a |
+
+
+
+**6. CT_corridor_final_dissolved_buffered.shp**
+
+- `Title`: CT_corridor_final_dissolved_buffered.shp
+- `Abstract`: singlepart polygon of width 1080 meters of an estimated river corridor for the Connecticut River that I created
+- `Spatial Coverage`: along Windham and Windson Counties...Connecticut River mainstem from Wilder Dam down to confluence of Sugar River, NH/Ascutney, VT
+- `Spatial Resolution`: N/A
+- `Spatial Reference System`: EPSG 32145 - NAD 83 Vermont
+- `Temporal Coverage`: December 2023
+- `Temporal Resolution`: N/A
+- `Lineage`: Modified (buffered to 1080m width) version of a linestring layer for the CT River downloaded from the VT Open GeoData Portal 
+- `Distribution`: The raw data (linestring) is publicly available from the VT Open GeoData Portal
+- `Constraints`: N/A
+- `Data Quality`: This is my best estimate of what the river corridor for areas along the Connecticut River would look like
+- `Variables`: For each variable, enter the following information. If you have two or more variables per data source, you may want to present this information in table form (shown below)
+  - `Label`: variable name as used in the data or code
+  - `Alias`: intuitive natural language name
+  - `Definition`: Short description or definition of the variable. Include measurement units in description.
+  - `Type`: data type, e.g. character string, integer, real
+  - `Accuracy`: e.g. uncertainty of measurements
+  - `Domain`: Expected range of Maximum and Minimum of numerical data, or codes or categories of nominal data, or reference to a standard codebook
+  - `Missing Data Value(s)`: Values used to represent missing data and frequency of missing data observations
+  - `Missing Data Frequency`: Frequency of missing data observations: not yet known for data to be collected
+
+| Label | Alias | Definition | Type | Accuracy | Domain | Missing Data Value(s) | Missing Data Frequency |
+| :--: | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
+| OBJECTID | Unique identifier for each individual river corridor| ... | numeric| ... | ... | n/a | n/a |
+| WBID | unknown | ... | character| ... | ... | n/a | n/a |
+| WBDESC| description of spatial extent | ... | character| ... | ... | n/a | n/a |
+| geometry| point geometry| ... | unknown | ... | ... | n/a | n/a |
+
+
+
+**I received pre-processed versions of these data from the course instructors of Middlebury College's GEOG 0261 so as to best reproduce the students' analysis using the exact same data that the students receive; however, the instructors downloaded these data from the sources listed.  It is unknown the exact dates which the instructors downloaded and pre-processed these data, nor is it know the exact pre-processing steps taken by the instructors.  For the purpose of this reproduction, I am assuming that a competent GIS analyst or data analyst could easily download the raw files from the sources mentioned above, and pre-process them into the format that is ultimately provided to the students.  The .shp files included in the data/derived folder of the repository are those pre-processed files that the students receive, with the exception of the towns.shp file (the copy that I received from an instructor was corrupted), so I downloaded this directly from the ACS, and the CT_corridor_final_dissolved_buffered.shp which I produced in QGIS using methodology outlined below. The root source of this CT corridor layer is a linestring layer of the Connecticut River which I downloaded from the Vermont Open GeoData Portal (publicly accessible)**
 
 **You can find the full metadata for each of these variables in the `data/metadata` section of the repository**
-
 
 
 
@@ -159,9 +349,7 @@ Going into this study, I know that there is a boundary distortion along the east
 
 Also, I know going into this study that there are issues with small numbers of mobile homes in some towns that are used as denominators in calculating percentages, and this will lead to overly sensitive and overly inflated percentages in some towns.  I do not plan to change this, as that would require calculating the area of towns and counties, which I did not have time for when completing this study.
 
-Given the research design and primary data to be collected and/or secondary data to be used, discuss common threats to validity and the approach to mitigating those threats, with an emphasis on geographic threats to validity.
-
-Lastly, the original QGIS study utilizes and area weighted reaggration for determining a number of mobile homes at risk in the FEMA flood zones, based on ACS 2014-2018 survey data and assuming an even distribution of mobile homes across counties.  However, the GEOG 0261 course has repeatedly demonstrated that this is an inaccurate approach to the research question, and thus I will not try to reproduce this part of the study.  This is an issue of a modifiable areal unit problem.
+Lastly, the original QGIS study utilizes an area weighted re-aggregation for determining a number of mobile homes at risk in the FEMA flood zones, based on ACS 2014-2018 survey data and assuming an even distribution of mobile homes across counties.  However, the GEOG 0261 course has repeatedly demonstrated that this is an inaccurate approach to the research question, and thus I will not try to reproduce this part of the study.  This is an issue of a modifiable areal unit problem.
   
 
 
@@ -275,7 +463,10 @@ MHs_by_county <- block_groups %>%
   summarise(number_of_MHs = sum(mobileHU)) %>%
   st_drop_geometry()
 
-MHs_by_county 
+MHs_by_county %>%
+  kable(caption = "Column 1: Number of Mobile Homes in Each County (ACS)",
+        align = "c") %>%
+  kable_styling(full_width = FALSE)
 ```
 
 
@@ -343,7 +534,10 @@ mh_fema_by_county <- mh_fema %>%
   count(county, name = "mobile_home_count") %>%
   st_drop_geometry()
 
-mh_fema_by_county
+mh_fema_by_county %>%
+  kable(caption = "Column 3: Number of MHs at Risk (E911 and FEMA Flood Zones)",
+        align = "c") %>%
+  kable_styling(full_width = FALSE)
 
 
 # Group by county, counting the number of MHs at risk...using select by location data
@@ -376,7 +570,10 @@ mh_rc_by_county <- mh_rc %>%
   count(county, name = "mobile_home_count") %>%
   st_drop_geometry()
 
-mh_rc_by_county
+mh_rc_by_county %>%
+  kable(caption = "Column 4: Number of MHs at Risk (E911 and River Corridors)",
+        align = "c") %>%
+  kable_styling(full_width = FALSE)
 
 # I use the spatial join + filter for the MHs in the river corridor approach due to the reasons outlined in the previous code chunk
 ```
@@ -390,13 +587,20 @@ final_table_1 <- MHs_by_county %>%
   mutate(MHs_at_risk_River_Corridors = mh_rc_by_county$mobile_home_count) %>%
   mutate(FEMA_rate = MHs_at_risk_FEMA / number_of_MHs) %>%
   mutate(RC_rate = MHs_at_risk_River_Corridors / number_of_MHs)
-final_table_1
+
+final_table_1 %>%
+    kable(caption = "Table 1. Expected Results Table of Mobile Home Flood Risk",
+        align = "c") %>%
+  kable_styling(full_width = FALSE)
+
 
 # Export the final table to a CSV
 write.csv(final_table_1, file = file.path(results_tables, 'Table1.csv'), row.names = FALSE)
 ```
 
-Unplanned deviation for reproduction: I decided to calculate "rates "risk rates" to indicate what proportion of a county's mobile homes lie within the FEMA flood zones and the River Corridors, respectively.  They are pretty similar for Windham County.  In Bennington County, the FEMA risk rate is higher than the River Corridor risk rate.  In Windsor County and Rutland County, the River Corridor risk rate is higher than the FEMA risk rate.
+**Unplanned deviation for reproduction:** I decided to calculate "risk rates" to indicate what proportion of a county's mobile homes lie within the FEMA flood zones and the River Corridors, respectively (the last two columns at the righthand side of the table).  They are pretty similar for Windham County.  In Bennington County, the FEMA risk rate is higher than the River Corridor risk rate.  In Windsor County and Rutland County, the River Corridor risk rate is higher than the FEMA risk rate.
+
+These results perfectly match the results achieved using the QGIS approach in GEOG 0261. The reproduction of this table was a success!
 
 
 
@@ -462,18 +666,24 @@ town_data <- town_data %>%
 
 most_vulnerable_towns <- town_data %>%
   arrange(-pct_mh_at_risk) %>%
-  head(10)
+  head(10) %>%
+  st_drop_geometry()
 
-most_vulnerable_towns
+most_vulnerable_towns %>%
+    kable(caption = "Table 2. Towns with the Highest % of Mobile Homes at Risk to Flooding (either FEMA or RCs)",
+        align = "c") %>%
+  kable_styling(full_width = FALSE)
 
 # Export the table to a CSV
 write.csv(most_vulnerable_towns, file = file.path(results_tables, 'TownsWithHighestPercentageOfMobileHomesAtRisk.csv'), row.names = FALSE)
 ```
 
-Results slightly differ between this ant the GEOG 0261 results because I directly downloaded the towns.shp file from the VT Open GeoData Portal, while the GEOG 0261 class uses a pre-cleaned provided towns shapefile layer.  I could not use the provided one due to file corruption issues.  However, the provided one for the class distinguishes between Rutland Town and Rutland City, while the layer that I downloaded treated the two as a combined town of "Rutland." Rutland Town has a pct_mh_at_risk value of 57.89, so if my towns file distinguished just the town portion, it would be in the top 10 of highest risk towns for mobile homes at risk.
+Results slightly differ between this and the GEOG 0261 results because I directly downloaded the towns.shp file from the VT Open GeoData Portal, while the GEOG 0261 class uses a pre-cleaned provided towns shapefile layer.  I could not use the provided one due to file corruption issues.  However, the provided one for the class distinguishes between Rutland Town and Rutland City, while the layer that I downloaded treated the two as a combined town of "Rutland." Rutland Town has a pct_mh_at_risk value of 57.89, so if my towns file distinguished just the town portion, it would be in the top 10 of highest risk towns for mobile homes at risk.
+
+However, overall, this is basically a perfect reproduction!  Not much more to add here, other than a celebration that the code-based approach in R seems to be doing an excellent job at producing the QGIS results from GEOG 0261.
 
 
-## Plot a choropleth map of the % of mobile homes in each town that are at risk to flooding, and export (Map 1)
+## Plot a choropleth map of the % of mobile homes in each town that are at risk to flooding, and export ("Map 1")
 ```{r}
 # Visualize!
 tmap_mode("plot")
@@ -489,6 +699,10 @@ tmap_save(pct_mh_at_risk_by_town, filename = paste0(results_figures, "/pct_mh_at
 
 pct_mh_at_risk_by_town
 ```
+Technically an optional map in GEOG 0261, but most students did create this.
+
+Aside from the Rutland Town boundary issue, this map perfectly resembles the QGIS output from GEOG 0261.  Another win for !
+
 
 # Unplanned deviation for reproduction: identify areas where FEMA 100 year Flood Zones and VT River Corridors do not line up
 
@@ -529,7 +743,10 @@ mh_ct_river_corridor_by_county <- mh_ct_river_corridor %>%
   count(county, name = "mobile_home_count") %>%
   st_drop_geometry()
 
-mh_ct_river_corridor_by_county
+mh_ct_river_corridor_by_county %>%
+    kable(caption = "Number of Mobile Homes Within My Estimated Connecticut River Corridor, By County",
+        align = "c") %>%
+  kable_styling(full_width = FALSE)
 ```
 
 While this is definitely a bit of an overestimate, it does highlight how the VT River Corridor model's omission of the Connecticut River excludes a significant number of mobile homes.  There are a large number of mobile home parks close to the Connecticut River, which is a contributing factor.  61 mobile homes in Windsor at risk to flooding and 283 mobile homes in Windsor are at risk to flooding, aka they intersect my estimated river corridor for the Connecticut River.
@@ -653,7 +870,9 @@ Lastly, as the capstone project to my GEOG 0361, this reproduction has been prod
 
 # Integrity Statement
 I followed and accomplished what I set out to do in my preanalysis plan.  I did make a few slight deviations to improve the code and the interpretability of my report/findings:
+
 - To isolate the mobile homes in the flood risk polygons, instead of selecting by location (1 step), I ended up using a spatial join and then filtering based on mobile homes that were in the flood risk layer(2 steps) because of a warning message I got with the 1 step approach.  The 1 step approach took much longer to run.
+
 - I ended up creating a polygon layer that is the difference between FEMA 100yr Flood Zones and VT River Corridor polygons, to show where the two methods of spatially identifying flood risk do not line up.  I then plotted this in an interactive tmap with a satellite basemap so that the reader can play around with it to see where they don't align.
 
 I - the author of this reproduction study - state that I completed what I outlined in my preregistration to the best of my knowledge and that no other preregistration exists pertaining to the same hypotheses and research.
@@ -663,6 +882,7 @@ I - the author of this reproduction study - state that I completed what I outlin
 This report is based upon the template for Reproducible and Replicable Research in Human-Environment and Geographical Sciences, DOI:[10.17605/OSF.IO/W29MQ](https://doi.org/10.17605/OSF.IO/W29MQ)
 
 # References
+
 Baker, D., Hamshaw, S. D., & Hamshaw, K. A. (2014). Rapid flood exposure assessment of Vermont mobile home parks following Tropical Storm Irene. Natural Hazards Review, 15(1), 27-37. DOI: 10.1061/(ASCE)NH.1527-6996.0000112.
 
 Schmitt, R. R. (1978). Threats to validity involving geographic space. Socio-Economic Planning Sciences, 12(4), 191–195. https://doi.org/10.1016/0038-0121(78)90044-7
