--- a/software.bib
+++ b/software.bib
@@ -47,6 +47,14 @@
   url = {https://here.r-lib.org/},
 }
 
+@Manual{R-kableExtra,
+  title = {kableExtra: Construct Complex Table with kable and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2021},
+  note = {R package version 1.3.4},
+  url = {http://haozhu233.github.io/kableExtra/},
+}
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
